// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`convertENotationNumbers 1`] = `
<input
  className="property-input form-control"
  data-info-type="Double"
  id="doublePropertyInput"
  onBlur={[Function]}
  onChange={[Function]}
  onInput={[Function]}
  required={true}
  type="text"
  value="110"
/>
`;

exports[`convertENotationNumbers 2`] = `
<input
  className="property-input form-control"
  data-info-type="Double"
  id="doublePropertyInput"
  onBlur={[Function]}
  onChange={[Function]}
  onInput={[Function]}
  required={true}
  type="text"
  value="text"
/>
`;
